[package]
name = "fft-rs"
version = "0.1.0"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
num = "0.3.0"
num-complex= "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_fft"
harness = false
